// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Pill Default 1`] = `
<div
  className="flex items-start justify-start"
>
  <div
    className="bg-tertiary flex items-center justify-center rounded-2xl py-0.5 px-3 first-letter:uppercase"
  >
    <p
      className="text-black flex h-fit items-center text-bold-caption-200"
      data-testid="txt"
    >
      Pill children
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Pill Error 1`] = `
<div
  className="flex items-start justify-start"
>
  <div
    className="bg-error-200 flex items-center justify-center rounded-2xl py-0.5 px-3 first-letter:uppercase"
  >
    <p
      className="text-black flex h-fit items-center text-bold-caption-200"
      data-testid="txt"
    >
      Error
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Pill Neutral 1`] = `
<div
  className="flex items-start justify-start"
>
  <div
    className="bg-neutral-200 flex items-center justify-center rounded-2xl py-0.5 px-3 first-letter:uppercase"
  >
    <p
      className="text-black flex h-fit items-center text-bold-caption-200"
      data-testid="txt"
    >
      Neutral
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Pill Primary 1`] = `
<div
  className="flex items-start justify-start"
>
  <div
    className="bg-primary-200 flex items-center justify-center rounded-2xl py-0.5 px-3 first-letter:uppercase"
  >
    <p
      className="text-black flex h-fit items-center text-bold-caption-200"
      data-testid="txt"
    >
      Primary
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Pill Secondary 1`] = `
<div
  className="flex items-start justify-start"
>
  <div
    className="bg-secondary-200 flex items-center justify-center rounded-2xl py-0.5 px-3 first-letter:uppercase"
  >
    <p
      className="text-black flex h-fit items-center text-bold-caption-200"
      data-testid="txt"
    >
      Secondary
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Pill Success 1`] = `
<div
  className="flex items-start justify-start"
>
  <div
    className="bg-success-200 flex items-center justify-center rounded-2xl py-0.5 px-3 first-letter:uppercase"
  >
    <p
      className="text-black flex h-fit items-center text-bold-caption-200"
      data-testid="txt"
    >
      success
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Pill Tertiary 1`] = `
<div
  className="flex items-start justify-start"
>
  <div
    className="bg-tertiary-200 flex items-center justify-center rounded-2xl py-0.5 px-3 first-letter:uppercase"
  >
    <p
      className="text-black flex h-fit items-center text-bold-caption-200"
      data-testid="txt"
    >
      Tertiary
    </p>
  </div>
</div>
`;
